Test/Files/Parser/FullParserTestCases/FullTests/Out/testcase92-03.out


Parse error on line 1:
class {void main (String[
------^
Expecting 'ID'